@@ -1,5 +1,10 @@
 2009-04-03  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpTextEditorCompletion.cs: Implemented "Bug 325527 -
+	  Make C# intellisense smarted for base classes".
+
+2009-04-03  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/ResolveVisitor.cs:
 	* Gui/MemberCompletionData.cs:
 	* Gui/NRefactoryParameterDataProvider.cs: Added some tooltip
